ncc/testsuite/positive/generics2.n
    public static class Main
    {
        public static Execute[T](b : B1[T]) : void  where T : A1
        {
            System.Console.WriteLine(b.D.A.LastModified);
        }
    }
    public class C[T] where T : A
    {
        public A : T
        {
            get
            {
                null;
            }
        }
    }
    public class D[T] : C[T] where T : A
    {
    }

    public class B[T] where T : A
    {   
        public  D : D[T]
        {
            get
            {
                null;
            }
        }
    }

    public class B1[T] : B[T] where T : A1
    {
    }

    public class A
    {
    }
    public class A1 : A
    {   
        public  LastModified : System.DateTime
        {
            get
            {
                System.DateTime.Now;
            }
        }
    }
    
    
class AunderB ['a, 'b] where 'a : 'b {
  public static x : AunderB ['a, 'b] = AunderB();
  
  public foo (_x : 'a, _y : 'b) : void { 
    System.Console.WriteLine ("{0} {1}", typeof ('a), typeof ('b));
  }
}

AunderB.x.foo (1,1);
AunderB.x.foo (A1(), A());
    
    
/*
BEGIN-OUTPUT
System.Int32 System.Int32
A1 A
END-OUTPUT
*/  
  