ncc/testsuite/negative/nested-generic.n
class A[a] {
  static f () : void {
    _ = null :> B.C; //E: cannot determine nested type parameters for `B.C', please use the fully qualified name
  }
  class B[T] { public class C {} }
}
_ = 1
